# LabProgrammazione_Progress_Bar

./: BarGUI.cpp  BarGUI.h  CMakeLists.txt  Display.h  FileManager.cpp  FileManager.h  Observer.h  ProgressBarDisplay.cpp  ProgressBarDisplay.h  README.md  ResourceFile.cpp  ResourceFile.h  Subject.h  main.cpp
